[package]
name = "netmath-back-end"
version = "0.1.0"
edition = "2024"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
log = "0.4.27"
